[package]
name = "media"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "cookies"] }
tokio = { version = "1.12.0", features = ["full"] }
regex = "1.7.1"
serde_json = "1.0.94"
serde = "1.0.157"
actix-web = "4.3.1"
