[package]
name = "media"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "cookies"] }
tokio = { version = "1.12.0", features = ["full"] }
regex = "1.7.1"
serde_json = "1.0.94"
serde = "1.0.157"
actix-web = "4.3.1"
actix-multipart = "0.6.0"
walkdir = "2.3.3"
futures-util = "0.3.28"
actix-extras = "0.1.0"
actix-web-httpauth = "0.8.0"
actix = "0.13.3"
derive_more = "0.99.17"
futures = "0.3.30"
dotenv = "0.15.0"
